# Auth-SDK

./: .gitignore  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml
.github/workflows/: README.md  ci.yml  docker-build.yml  release.yml
Docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  INTEGRATION_GUIDE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  SDK.md  SECURITY.md  design.md  requirements.md  tasks.md
UI/src/app/: layout.tsx
UI/src/components/: DashboardNav.tsx  Footer.tsx  Hero.tsx  Navigation.tsx
backend/: Dockerfile  README.md  main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: __init__.py
backend/app/core/: config.py  database.py  exceptions.py  logging_config.py  middleware.py  portal_auth.py  redis.py  scheduler.py
backend/app/models/: __init__.py  api_key.py  application.py  audit_log.py  developer.py  email_verification_token.py  password_reset_token.py  session.py  (+2 more)
backend/tests/: conftest.py  test_auth.py
examples/fastapi-example/: README.md  main.py  requirements.txt
examples/react-example/: README.md  package-lock.json  package.json
portal/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
portal/app/: layout.tsx  page.tsx  providers.tsx
sdk/js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/py/: README.md  package-lock.json  pyproject.toml  setup.py
sdk/py/devauth/: __init__.py  client.py  exceptions.py
sdk/py/devauth/integrations/: __init__.py  fastapi.py  flask.py
(+64 files in other folders)
