[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devauth-py"
version = "0.1.0"
description = "DevAuth Python SDK for backend token validation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DevAuth Team"}
]
keywords = ["authentication", "auth", "jwt", "oauth", "devauth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0"]
flask = ["flask>=2.3.0"]

[tool.setuptools]
packages = ["devauth"]

[tool.setuptools.package-data]
devauth = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

